--- a/Style/main.css
+++ b/Style/main.css
@@ -3,5 +3,14 @@
 }
 
 body {
-    background: #432818;
+    background: #5c3823;
+}
+header{
+    color:wheat;
+}
+a{
+    color:#25170f;
+}
+h1{
+    color:wheat;
 }
