--- a/templates/header.html
+++ b/templates/header.html
@@ -19,26 +19,9 @@
             <input type="password" id="user_Password" name="user_Password"><br>
             <br>
             <input type="submit" value="Login">
-            <!-- <button type="button" id="sign-up">Sign-up</button>  -->
-            
+            <button type="button" id="sign-up">Sign-up</button> 
         </form>
-        <button onclick="window.location.href = 'sign-up.php';">sign-up</button>
+        
     </header>
-    <body>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="new-releases.html">New Releases</a>
-            <a href="newsletter.html">Newsletter</a>
-            <a href="best-sellers.html">Best Sellers</a>
-            <a href="recommend.html">Recommendations</a>
-         </nav>  
-
-        <div id="logo"></div>
-        <script type = "text/javascript">
-            /* React code */
-            let h1 = React.createElement('h1',null, "Books Aren't Dead!");
-        </script>
-        
-        
-    </body>
-</html>
+    
+    </html>
