Changed html files to php and added templates

--- a/templates/header.html
+++ b/templates/header.html
@@ -19,8 +19,8 @@
             <input type="password" id="user_Password" name="user_Password"><br>
             <br>
             <input type="submit" value="Login">
-            <button type="button" id="sign-up">Sign-up</button> 
         </form>
+        <button onclick="window.location.href = 'sign-up.php';">sign-up</button>
         
     </header>
     
