--- a/Style/main.css
+++ b/Style/main.css
@@ -14,3 +14,46 @@ a{
 h1{
     color:wheat;
 }
+
+.dropbtn {
+    background-color: #ffffff;
+    color: black;
+    padding: 10px;
+    font-size: 14px;
+}
+  
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+  
+.dropdown:hover .dropbtn {
+    background-color: #ffffff;
+}
+  
+.dropdown-content a:hover {
+    background-color: rgb(143, 14, 14);
+}
+
+input[type=text] {
+   
+    font-size: 17px;
+
+}
