--- a/Style/main.css
+++ b/Style/main.css
@@ -57,3 +57,12 @@ input[type=text] {
     font-size: 17px;
 
 }
+
+.cartbtn{
+    background-color: #ffffff;
+    color: black;
+    padding: 5px;
+    font-size: 12px;
+    float: right;
+}
+
