Worked on login
Worked on login

--- a/templates/body.html
+++ b/templates/body.html
@@ -13,11 +13,13 @@
 <body>
         <nav>
             <ul>
-                <li><a href="index.php">Home</a></li>
-                <li><a href="new-releases.php">New Releases</a></li>
-                <li><a href="newsletter.php">Newsletter</a></li>
-                <li><a href="best-sellers.php">Best Sellers</a></li>
-                <li><a href="recommend.php">Recommendations</a></li>
+                <li><a href="index.php" id="navbar">Home</a></li>
+                <li><a href="new-releases.php" id="navbar">New Releases</a></li>
+                <li><a href="newsletter.php" id="navbar">Newsletter</a></li>
+                <li><a href="best-sellers.php" id="navbar">Best Sellers</a></li>
+                <li><a href="recommend.php" id="navbar">Recommendations</a></li>
+                <li><a href="login.php" id="navbar">Login</a></li>
+                <li><a href="sign-up.php" id="navbar">sign-up</a></li>
             </ul>
             
          </nav>  
