--- a/Style/nav-bar.css
+++ b/Style/nav-bar.css
@@ -8,6 +8,7 @@ header{
     margin: auto;
 }
 
+
 nav {
     clear:both;
 }
@@ -24,13 +25,13 @@ ul {
     border-right: 1px solid #ffe6a7;
   }
   
-  a {
+a#navbar{
     display: block;
     padding: 8px;
     background-color: #6f1d1b;
   }
 
-  li a {
+  li a{
     display: block;
     color: #ffe6a7;
     text-align: center;
@@ -56,8 +57,19 @@ ul {
     box-sizing: border-box;
   }
 
-  input[type=submit], #sign-up {
-    padding: 2px 2px;
-    margin: 2px 0px 10px 0px;
-    display: inline-block;
+  #sign-up {
+    background-color: #ffffff;
+  border: none;
+  color: white;
+  padding: 20px 34px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
   }
+
+ 
+
+ 
