--- a/Style/nav-bar.css
+++ b/Style/nav-bar.css
@@ -25,7 +25,7 @@ ul {
     border-right: 1px solid #ffe6a7;
   }
   
-a#navbar{
+a{
     display: block;
     padding: 8px;
     background-color: #6f1d1b;
@@ -57,18 +57,6 @@ a#navbar{
     box-sizing: border-box;
   }
 
-  #sign-up {
-    background-color: #ffffff;
-  border: none;
-  color: white;
-  padding: 20px 34px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  cursor: pointer;
-  }
 
  
 
