--- a/Style/nav-bar.css
+++ b/Style/nav-bar.css
@@ -17,22 +17,23 @@ header{
 
 nav {
     clear:both;
+    position: relative;
 }
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    position: fixed;
     width: 100%;
   }
   
   li {
-    float: left;
+   display: inline-block;
     border-right: 1px solid #ffe6a7;
+    border-left: 1px solid #ffe6a7;
   }
   
 a{
-    display: block;
+    display: inline-block;
     padding: 8px;
     background-color: #6f1d1b;
   }
@@ -41,7 +42,7 @@ a{
     display: block;
     color: #ffe6a7;
     text-align: center;
-    padding: 8px 10px;
+    padding: 8px 8px;
     text-decoration: none;
   }
 
