--- a/books/src/routes/BooksPage.css
+++ b/books/src/routes/BooksPage.css
@@ -6,3 +6,12 @@
 	display: grid;
 	grid-template-columns: 1fr 5fr;
 }
+
+.no-books {
+	text-align: center;
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%)
+}
