--- a/books/src/index.css
+++ b/books/src/index.css
@@ -1,3 +1,20 @@
+header{
+  display:block; 
+  width:auto; 
+  text-align:right;
+  background-color: #a55c1b;
+  background-image: linear-gradient(180deg, #bb9457 0%, #99582a 90%);
+  border-bottom: 3px solid #6f1d1b;
+  margin: auto;
+}
+
+.logo{
+  display:block; 
+  width:auto; 
+  text-align:right;
+  margin: auto;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,22 +29,56 @@ code {
     monospace;
 }
 
-#topnav p, a, svg {
-  display: inline;
-  font-size: 1.5em;
-  margin: .2em 1.5em;
-  text-decoration: none;
-  color: black;
+.topnav nav {
+  clear:both;
+  position: relative;
 }
 
-#topnav a {
-  text-decoration: none;
+.topnav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
-#topnav {
+.topnav li {
+ display: inline-block;
+  border-right: 1px solid #ffe6a7;
+  border-left: 1px solid #ffe6a7;
+}
+
+.topnav a{
+  display: inline-block;
+  padding: 8px;
+  background-color: #6f1d1b;
+}
+
+.topnav li a{
   display: block;
+  color: #ffe6a7;
+  text-align: center;
+  padding: 8px 8px;
+  text-decoration: none;
+}
+
+.topnav li a:hover{
+  background-color: rgba(189, 33, 33, 0.897)
+} 
+
+h1 {
+  margin-top: 0;
+  text-align: center;
 }
 
 #container {
   margin-left: 2em;
+  background-color: #5c3823;
+}
+
+#container p, h2, h3, label{
+  color: #ffe6a7;
+}
+
+body {
+  background-color: #5c3823;
 }
